css/style.css
body {
  background: #f7f7f7;
  color: #898989;
  font-family: 'Poppins', helvetica;
  font-size: 15px;
  font-weight: 300;
  line-height: 20px;
  letter-spacing: 0.02em;
  overflow-x: hidden;
  margin: 0 auto;
  padding: 0;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  -o-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}



.et-hero-tabs,
.et-slide {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 10%;
    position: relative;
    text-align: center;
    padding: 0 2em;
    h1 {
        font-size: 2rem;
        margin: 0;
        letter-spacing: 1rem;
    }
    h3 {
        font-size: 1rem;
        letter-spacing: 0.3rem;
        opacity: 0.6;
    }
}

.et-hero-tabs-container {
    display: flex;
    flex-direction: row;
    position: fixed;
    top: 0;
    width: 100%;
    height: 70px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
    z-index: 10;
    &--top {
        position: fixed;
        top: 0;
    }
}


.et-hero-tab {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
    color: #000000;
    background: #ffffff;
      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
    letter-spacing: 0.1rem;
    font-size: 0.8rem;

}

.et-hero-tabs-container a:hover{
  text-decoration: none;
  color: #66B1F1;
}


/*-----------------------------------------------------------------------------------*/
/*  
Signature
/*-----------------------------------------------------------------------------------*/




/*----------------------------------------------------------------------------------*/
/*  Header
/*-----------------------------------------------------------------------------------*/
#large-header {
  position: relative;
  width: 100%;
  overflow: hidden;
  background-color: #5b6467;
  background-image: linear-gradient(-45deg, #5b6467,  #D3D3D3, #C0C0C0, #686868);
  z-index: 1;
  height: 85vh;
  width: 100%;
}


#large-header .header-content {
  text-align: left;
  margin-right: 0px;
  width: 35%;
  justify-content: center;
  flex-direction:  column;
  float: left;
  display:inline-block; 
  position: absolute;
  top: 20vh;
  left: 5%;
}


.header-content h1{
  font-family:MontserratRegular,Helvetica,sans-serif;
  color:#fff;
  font-size:2.5rem;
  font-weight:2000;
  float = right;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
  overflow: hidden;
}
.header-content h2 {
  font-family:BebasNeueBook,Helvetica,sans-serif;
  font-size: 1.00rem;
  font-weight: 300;
  padding-top: 10px;
  text-transform: uppercase;
  color: #fff;
  float: right: 
}
.header-content h3 {
  font-family:BebasNeueBook,Helvetica,sans-serif;
  font-size: 2.50rem;
  font-weight: 500;
  padding-top: 10px;
  text-transform: uppercase;
  color: #fff;
  float: right: 
}
.header-content p {
  font-size: 13px;
  letter-spacing: 5px;
  margin-top: 0;
  margin-bottom: 30px;
  text-transform: capitalize;
  color: #fff;
  font-weight: 500;
}

.header-content .list-social li {
  float: left;
  margin-right: 20px;
}

.header-content .list-social li i {
  color: #fff;
  font-size: 15px;
}
.header-details divSignature {
  width: 300px;
  position: absolute; 
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 200px;
  float = right;
  padding-top: 40px;
  padding-bottom: 10px;

}

path {
    fill: none;
    stroke: #ffffff;
    stroke-width: 1;
    stroke-linecap: round;
    stroke-linejoin: round;
    stroke-miterlimit: 10;
      text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);

}
.line1 {
    stroke-dasharray: 30;
    animation: write1 19s linear;
}
.line2 {
    stroke-dasharray: 43; 
    animation: write2 19s linear;
}
.line3 {
    stroke-dasharray: 16;
    animation: write3 19s linear;
}
.line4 {
    stroke-dasharray: 23;
    animation: write4 19s linear;
}

.line5 {
    stroke-dasharray: 30;
    animation: write5 19s linear;
}
.line6 {
    stroke-dasharray: 97;
    animation: write6 19s linear;
}
.line7 {
    stroke-dasharray: 81;
    animation: write7 19s linear;
}
@keyframes write1 {

    0%, 20% {
        stroke-dashoffset: 30;
    }
    22% {
        stroke-dashoffset: 0;
    }
}
@keyframes write2 {
    0%, 22% {
        stroke-dashoffset: 44;
    }
    23% {
        stroke-dashoffset: 0;
    }
}
@keyframes write3 {
    0%, 23% {
        stroke-dashoffset: 17;
    }
    24% {
        stroke-dashoffset: 0;
    }
}
@keyframes write4 {
    0%, 24% {
        stroke-dashoffset: 23;
    }
    26% {
        stroke-dashoffset: 0;
    }
}
@keyframes write5 {
    0%, 27% {
        stroke-dashoffset: 31;
    }
    29% {
        stroke-dashoffset: 0;
    }
}
@keyframes write6 {
    0%, 29% {
        stroke-dashoffset: 98;
    }
    31% {
        stroke-dashoffset: 0;
    }
}
@keyframes write7 {
    0%, 31% {
        stroke-dashoffset: 82;
    }
    34% {
        stroke-dashoffset: 0;
    }
}

figure.image-details{  
  font-family: 'Raleway', Arial, sans-serif;
  color: #fff;
  justify-content: center;
  display: inline-block;
  overflow: hidden;
  float: right;
  position: absolute;
  top: 50%;
  left: 50%;
  /* bring your own prefixes */
  transform: translate(-40%, -40%);
  width: 19%;
}
figure.image-details * {
}
figure.image-details img {
  width: 100%;
  height: 100%;
  vertical-align: center;
}


/*Right Side of header*/
#large-header .header-details {
  text-align: left;
  width: 20%;
  display: inline-block;
  justify-content: center;
  flex-direction:  column;
  float: right;
  position: absolute;
  top: 25vh;
  right: 5%;
}
.header-details h1 {
font-family:SourceSansProRegular,Helvetica,sans-serif;
font-size:.75rem;
line-height:16px;
font-weight: 9;
color:#fff;
width:100%;
float:left;
margin-bottom:2px;
padding-left: 3px;
word-wrap:break-word;
}
.header-details h2 {
  font-family:BebasNeueBook,Helvetica,sans-serif;
  font-size:3rem;
  line-height:48px;
  font-weight: lighter;
  color:#fff;
  width:100%;
  float:left;
  margin-bottom: 10px;
  padding-bottom: 30px;
}








@import url(https://fonts.googleapis.com/css?family=Raleway:400,200,300,800);
figure.snip0019 {
  font-family: 'Raleway', Arial, sans-serif;
  color: #fff;
  position: relative;
  overflow: hidden;
  margin: 30px;
  width: 30%;
  height: 30%;
  background: white;
  text-align: center;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 25px;
}
figure.snip0019 * {
  
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
figure.snip0019 img {
    max-width: 100%;
    max-height: 100%;
  -webkit-transition: opacity 0.35s;
  transition: opacity 0.35s;

}
figure.snip0019 figcaption {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: left;
}
figure.snip0019 figcaption > div {
  float: left;
  height: 100%;
  overflow: hidden;
  width: 50%;
  position: relative;
}
figure.snip0019 figcaption::before {
  position: absolute;
  top: 50%;
  bottom: 50%;
  left: 50%;
  width: 2px;
  content: '';
  opacity: 0;
  background-color: rgba(255, 255, 255, 0);
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  -webkit-transition-delay: 0.6s;
  transition-delay: 0.6s;
}
figure.snip0019 h2,
figure.snip0019 p {
  margin: 0;
  padding: 20px;
  opacity: 0;
  position: absolute;
  top: 0;
  width: 100%;
  left: 0;
  -webkit-transition: opacity 0.45s, -webkit-transform 0.45s;
  transition: opacity 0.45s,-webkit-transform 0.45s,-moz-transform 0.45s,-o-transform 0.45s,transform 0.45s;
}
figure.snip0019 h2 {
  text-align: right;
  display: inline-block;
  overflow: hidden;
  word-spacing: -0.1em;
  font-weight: 300;
  font-size:1.5vw;
  text-transform: uppercase;
  bottom: 0;
  background: rgba(0, 0, 0, 0.5);
  -webkit-transform: translate3d(50%, 0%, 0);
  transform: translate3d(50%, 0%, 0);
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}
figure.snip0019 h2 span {
  font-weight: 800;
}
figure.snip0019 p {
  display: block;
  bottom: 0;
  text-align: left;
  font-weight: 300;
  top: 0%;
  color: #000;
  background: #ffffff;
  -webkit-transform: translate3d(-50%, 0%, 0);
  transform: translate3d(-50%, 0%, 0);
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}
figure.snip0019 a {
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  color: #ffffff;
}
figure.snip0019:hover img {
  opacity: 0.7;
}
figure.snip0019:hover figcaption h2,
figure.snip0019:hover figcaption p {
  -webkit-transform: translate3d(0%, 0%, 0);
  transform: translate3d(0%, 0%, 0);
  -webkit-transition-delay: 0.3s;
  transition-delay: 0.3s;
}
figure.snip0019:hover figcaption h2 {
  opacity: 1;
}
figure.snip0019:hover figcaption p {
  opacity: 1;
}
figure.snip0019:hover figcaption::before {
  background: #ffffff;
  top: 0px;
  bottom: 0px;
  opacity: 1;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}

.row1{
  background-color: #000000;
  background-image: linear-gradient(-45deg, #000000,  #C0C0C0, #C0C0C0, #000000);
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
  height: 100%;
}
.row1 h1{
  font-family:MontserratRegular,Helvetica,sans-serif;
  color:#000000;
  font-size:2.5rem;
  font-weight:2000;
  letter-spacing:.7px;
  line-height:1.1;

  text-align: center;
}
.row2{
  background-color: #000000;
  background-image: linear-gradient(-45deg, #000000,  #C0C0C0, #C0C0C0, #000000);
  
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
  height: 100%;
}

.row3{
  background: #ffffff;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
  height: 15rem;
    padding: 1rem;
}

.row3 img{
  width: 8rem;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 100px;
  display: flex;
  justify-content: center;
  align-items: center;

}

.row3 line1{
  font-family:MontserratRegular,Helvetica,sans-serif;
  color:#000000;
  font-size: 10rem;
  text-align: center; 
  padding-bottom: 25px; 
  transform: scale(.1, 1);
}

.row3 h2{
  font-family: sans-serif;
  color:#000000;
  font-size:1.5rem;
  font-weight:bold;
  letter-spacing:.7px;
  text-align: left;
  padding-bottom: 0px;
  word-wrap: break-word; 
}
.row3 h3{
  font-family: sans-serif;
  color:#000000;
  font-size:1.0rem;
  font-weight:normal;
  letter-spacing:.7px;
  line-height: 1px;
  text-align: left; 
  padding-bottom: 1px; 
  text-overflow: hidden;

}


.row3 a{
  font-family: sans-serif;
  font-style: italic;
  color:#000000;
  font-size:1.0rem;
  font-weight:normal;
  letter-spacing:.7px;
  line-height: 1px;
  text-align: left;  
  padding-bottom: 4px; 
}

.row3 signature{
  background: #ffffff;
  /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
  border-radius: 25px;
  width: 80%;
  height: 80%;
  top: 50%;
  left: 50%;
  text-align: left;
    display: flex;
  justify-content: center;
  align-items: center;

}



.row3 box img{
  width: 15rem;
  border-radius: 0px;
  box-shadow: none;
  display: flex;
  justify-content: center;
  align-items: center;

}

